add profile modifications

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         
         </p>
         <p>I am comfortable with pyTorch, Tensorflow and other ML frameworks. I am also eager to learn, explore and contribute to developing libraries with 
-            bright future prospects. I would like to collaborate on research and projects involving CV, NLP or llm which can open new pathways for the development of AI.
+            bright future prospects. With a strong foundation in both theoretical and applied machine learning, I would like to collaborate on research and projects involving CV, NLP or llm which can open new pathways for the development of AI.
         </p>
   </section>
   <section id="education">
@@ -279,7 +279,7 @@
     </ul>
     <h3>National Institute of Technology, Rourkela</h3>
     <ul>
-        <li>Ceramic Engineering CGPA-8.03 (till date)</li>
+        <li>Ceramic Engineering CGPA-8.10 (till date)</li>
     </ul>
     </section>
   
@@ -335,9 +335,13 @@
         <a href="https://github.com/anirban1221/Segmenting_text_IndianLanguages.git">View on GitHub</a>
       </div>
       <div class="card">
-        <strong>Another Project</strong>
-        <p>Description of what it does and your role.</p>
-        <a href="https://github.com/yourusername/another-project">View on GitHub</a>
+        <strong>Text Recognition from old-middle age spanish documents</strong>
+        <p>Traditional OCR methods often fail to recognise text from old documents due to ink bleed, noise, and old Languages.
+          This project includes noise removing by Opencv methods, text detection avoiding unnecessary items in the documents. Then Text Recognition
+          using vision transformer models. I also included various methods to translate the obsolete letters, replacing them with the letters which are in 
+          use now, with the help of Spanish Dictionary. This model has a 24% Character Recognition Error (CER) and gives a F1-score[Charcter Level] of 84%.
+        </p>
+        <a href="https://github.com/anirban1221/Optical-Character-Regonition-RenAIssance.git">View on GitHub</a>
       </div>
     </div>
   </section>
@@ -360,10 +364,10 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
+    <p>Email: anirbanbanerjee3103@gmail.com</p>
     <div class="socials">
-      <a href="https://github.com/yourusername">GitHub</a>
-      <a href="https://linkedin.com/in/yourusername">LinkedIn</a>
+      <a href="https://github.com/anirban1221">GitHub</a>
+      <a href="https://linkedin.com/in/anirbanbanerjee2003">LinkedIn</a>
     </div>
   </section>
   <div class="popup-overlay" id="popupOverlay" onclick="closePopup()"></div>
