modifications in the website

--- a/index.html
+++ b/index.html
@@ -346,18 +346,23 @@
     </div>
   </section>
 
-  <section id="research">
+  <section id="research Interests">
     <h2>Research</h2>
     <div class="card-list">
       <div class="card">
-        <strong>Title of Paper A</strong>
-        <p>Short description or abstract. [Journal Name, Year]</p>
+        <strong>Natural Language processsing, deep Learning</strong>
+        <p>I would love to contribute on research projects that involves NLP, DeepLearning.So, if you loved my works feel free to contact me. I would like to contribute to research project as much as I can.</p>
       </div>
       <div class="card">
-        <strong>Title of Paper B</strong>
-        <p>Short description or abstract. [Conference Name, Year]</p>
+        <strong>LLMs , Foundation Models</strong>
+        <p>Recent developments in the field of AI has led to the vast development of foundation models and LLMs. I am learning this field and also exploring the user aspects of it. I would love to collaborate on research projects which will open new aspects in this field. </p>
       </div>
     </div>
+  </section>
+
+  <section id="resume">
+    <h2>Resume</h2>
+    <p><a href="required pictures\Resume_Anirban.pdf" target="_blank">view my resume here</a></p>
   </section>
 
   
@@ -382,11 +387,11 @@
 
   <script>
     const contentMap = {
-        ml: "Worked on classification and regression models using scikit-learn and TensorFlow. <a href='https://github.com/yourprofile/ml-project'>View Project</a>",
-        dl: "Built models for image segmentation and object detection. <a href='https://github.com/yourprofile/cv-project'>View Project</a>",
-        NLP: "Developed an unsupervised Hindi segmenter and fine-tuned TrOCR. <a href='https://github.com/yourprofile/nlp-project'>View Project</a>",
-        AI: "Research in document understanding with transformers. <a href='https://github.com/yourprofile/ai-project'>View Project</a>",
-        DSA: "Solved 300+ problems across LeetCode and GFG. <a href='https://github.com/yourprofile/dsa-snippets'>View Project</a>"
+        ml: "I worked on classification and regression models, I also made a car price prediction model project which can predict the price upon given specifications. You can find the project on my github profile .",
+        dl: "I created a face emotion detection model, this involves CNN archetecture and transfer learning techniques. You can find the project on my resume. I also cretaed projects using deep learning techniques and neural networks. You can view the projects on my github. ",
+        NLP: "Developed an Hindi text segmenter with heuristics and deep learning appraoch. Also, I worked on bettering my OCR projects with NLP for better accuarcy of extracting texts from old spanish documents.",
+        AI: "I am interested in research in AI. Also visit my github profile to see my practise works on genAI and LLMS. ",
+        DSA: "Apart from machine learning, deep learning, NLP and AI, I am currently learning Data Structures and Algorithms. This will help for optimizing complex and time-taking code. By this method I can increase the efficiency of the AI applications."
     };
 
     function openPopup(topic) {
