minor changes in profile

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   <section class="hero" id="home">
     <div class="hero-text">
       <h1>Anirban Banerjee</h1>
-      <p class="subtitle">AI ML Engineer | Developer | Researcher</p>
+      <p class="subtitle"> ML Engineer | AI Developer | Data Scientist</p>
       <p>NIT Rourkela '27</p>
       <p>BTech in Ceramic Engineering</p>
       <p>Minor in Computer Science and Engineering</p>
